# ChangeLog for dev-qt/qtnetwork
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtnetwork/ChangeLog,v 1.15 2015/04/25 18:24:48 kensington Exp $

  25 Apr 2015; Michael Palimaka <kensington@gentoo.org> metadata.xml:
  Add description for bindist USE flag.

  22 Apr 2015; Michael Palimaka <kensington@gentoo.org> qtnetwork-5.4.1.ebuild:
  Introduce bindist USE flag to better handle OpenSSL EC support wrt bug
  #546828.

  15 Apr 2015; Yixun Lan <dlan@gentoo.org> qtnetwork-5.4.1.ebuild:
  keyword arm64, tested on cortex-a53 hardware

  08 Mar 2015; Davide Pesavento <pesa@gentoo.org> qtnetwork-5.4.1.ebuild:
  Remove all keywords from "live" branch.

*qtnetwork-5.4.1 (24 Feb 2015)

  24 Feb 2015; Davide Pesavento <pesa@gentoo.org> +qtnetwork-5.4.1.ebuild,
  -qtnetwork-5.4.0.ebuild:
  Version bump.

  18 Feb 2015; Davide Pesavento <pesa@gentoo.org> metadata.xml:
  Sync metadata

  03 Feb 2015; Jeroen Roovers <jer@gentoo.org> qtnetwork-5.4.0.ebuild:
  Marked ~hppa too.

  02 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> qtnetwork-5.4.0.ebuild:
  Add ~arm keyword

  01 Feb 2015; Michael Palimaka <kensington@gentoo.org> -qtnetwork-5.3.2.ebuild:
  Remove old.

  08 Jan 2015; Davide Pesavento <pesa@gentoo.org> metadata.xml:
  Update upstream bugtracker URL.

*qtnetwork-5.4.0 (12 Dec 2014)

  12 Dec 2014; Michael Palimaka <kensington@gentoo.org> +qtnetwork-5.4.0.ebuild:
  Version bump.

*qtnetwork-5.3.2 (16 Sep 2014)

  16 Sep 2014; Davide Pesavento <pesa@gentoo.org> +qtnetwork-5.3.2.ebuild,
  -qtnetwork-5.3.1-r3.ebuild:
  Version bump.

*qtnetwork-5.3.1-r3 (11 Sep 2014)

  11 Sep 2014; Davide Pesavento <pesa@gentoo.org> +metadata.xml,
  +qtnetwork-5.3.1-r3.ebuild:
  Import Qt5 from qt overlay.