@@ -3,13 +3,13 @@ Hash: SHA256
 
 AUX qtnetwork-aes256.patch 3024 SHA256 c2b668d756be5783121a8016f5dd57956e15c51169f32d4814b7683c4a6bca3d SHA512 396735833bd30943df5bad68bb6d515545e810239cd1c0d60a5e40df827de67764a7e2744223389aa4cdc5c198d1fc842ebb3a726b352471da7b9405f8e113f5 WHIRLPOOL 204b5313723c99fb21021778f3852728788d7f17d182f40fc9e44ec81e1217e7be1e234aaef1dee9a795386a5296adbf8aa463ee4127158975aac9642dd1d596
 DIST qtbase-opensource-src-5.4.1.tar.xz 46132220 SHA256 8574a593830959c0f7e5430fe77a43832ea7f5299e14a397a74576b3df7fb1b7 SHA512 75d2c16bc47e6403e15c4094f50757157960cff4434de29f199b015795ba772b62125f01c09aceb2a06f8dfcfc4df8e35330259c76959239f276e2f5bd5221b5 WHIRLPOOL 48d9a583ba9d0bbfffdbfeaa2412e77a0bf4011e7bba525129ba4572faa6a55713a89cb00f4ed7f24e6782e3f7b8b48cb192e2c082b7dcb3c35a85109f2eb340
-EBUILD qtnetwork-5.4.1.ebuild 1303 SHA256 627f186847fb03e17ce472106f26d0736a80e0e4e50482da89ab14cff19e4bae SHA512 a9c0e5fcb93c682e68b73d92e1781c01ea38dc613d4d447703ce1e1c3baa692518fda17345ded5ef605c891873402e19c4718c30e0e68db6d92130b2003d6aa2 WHIRLPOOL 6c38d4e37b5ff206eb238303b2cf6987aaf0bbfa9d9869d571318cf40d0b0c8a6fedd675368a8b63efdaa8d420b9c2752bb08196e993ba483d3bf388d16ff365
-MISC ChangeLog 1775 SHA256 5be16499446190e190136d33f3f0b1512abb8945459dabcab7bb798daf8c80b3 SHA512 98849be1bfc06e876f50616cf470691bf7553d97a39ed5ecd2d3c8a439f35f1cffa9167084d552d521c4afbffb0d358bf439e4be52031518a27a2c1369eb59d1 WHIRLPOOL fcaf511b6fb67d880b37d6038b4d9f8178f12cfb33a613a63ba527eb4a351f9b206e7d6503c982e901d65ec51b0f7929dbb2a870a607fc94d5128b33226b4784
+EBUILD qtnetwork-5.4.1.ebuild 1290 SHA256 eb364a37b254ec3556401cca3d287e09f7780a1d42c8083f90f1c721727f8c86 SHA512 af791cda8374228f76250d596238e01f02ff4c19a722973a25879e4f98a040984e09d3406421f62e13cd10e9f661ddf840ae8d1f5e867aebe125d327b744e779 WHIRLPOOL 6c29592715a44fe7aafe956ed4f79585feca1508650cf11e961fa3ef32dc05015febfe5d4f6256d3fff4af660187490bf45f9d954040ff384e7090b65e3ecdba
+MISC ChangeLog 1948 SHA256 3149db7e0e12e2957c0b424a3a888b68d790940f26c71060918e7cf1fb2d9a98 SHA512 a943d93fb6e59d400a37fa572053eb481d33e469db57b6b8370bb685ff8b88e3624b2d9da1a4f511a66692c965046eec2351f361356130fb2b4e2f9973f0329a WHIRLPOOL 6e8ca007f3a928287d2eae69c7db0a99864111ae76fcce5d80437595ca8ed204268c04baf7e18f0fb558eab1d775991942f69252acf6f6080666728533edb569
 MISC metadata.xml 550 SHA256 76f2347316be95a2a92961dfb21eda670316b11d09cb036bf1f789f6f9c20849 SHA512 f6b2dd76da5e42baf10ba1c251f96eb3ca7d4f14c1831caeaf388f488ae1f1ee48f713320ae56b05cf3a6d080a09a70287879b5a729bfdc757a4e82343e5aa13 WHIRLPOOL 9923cd63a1827bb16d74554a640010b9944749f4c624ed0e587867d1c82ab70d82d95f71fed99990160894625c607f8706462d3dde3541a1f1aa3eedde5d7b0f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EARYIAAYFAlVn0E0ACgkQz9oPmzWWQiIXvwD8C1PIPx/VUcHuI0M2EtWQ+kqb
-8M0+3x844iTvFAG9zDsBAKmuY5VQin5cmo+C77wyGWkMs0MfWizLXnswWcnN0ZoJ
-=YyY7
+iF4EARYIAAYFAlV1B2AACgkQz9oPmzWWQiKhnQD/cYSsF4Dx0u3duGt51Zenv3ky
+8dDcdNlBhRMLlo2y9Z8A/22ruUCvV+Il5yt5tgsrki0Bg4TegGw0wTcZu9mYEGYG
+=N8OY
 -----END PGP SIGNATURE-----
